add folder dist

--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,9 @@
     "version": "1.0.0",
     "main": "src/index.ts",
     "scripts": {
-        "start": "ts-node src/index.ts",
-        "dev": "nodemon -r tsconfig-paths/register src/index.ts"
+        "dev": "ts-node src/index.ts",
+        "build": "tsc",
+        "start": "node dist/index.js"
     },
     "keywords": [],
     "author": "",
