--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,5 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "index.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "index.js"
-        }
-    ]
+    "builds": [{ "src": "dist/index.js", "use": "@vercel/node" }],
+    "routes": [{ "src": "/api/(.*)", "dest": "dist/index.js" }]
 }
