--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
     "version": "1.0.0",
     "main": "src/index.ts",
     "scripts": {
-        "dev": "ts-node src/index.ts",
-        "build": "tsc",
+        "build": "tsc && tsc-alias",
+        "dev": "ts-node -r tsconfig-paths/register src/index.ts",
         "start": "node dist/index.js"
     },
     "keywords": [],
@@ -20,6 +20,7 @@
         "express-session": "^1.18.1",
         "firebase": "^11.0.2",
         "jsonwebtoken": "^9.0.2",
+        "module-alias": "^2.2.3",
         "mongoose": "^8.7.0",
         "mongoose-delete": "^1.0.2",
         "mongoose-sequence": "^6.0.1",
@@ -42,6 +43,7 @@
         "express": "^4.21.2",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
+        "tsc-alias": "^1.8.11",
         "typescript": "^5.7.3"
     }
 }
